<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ogre_primitives</name>
    <version>0.1.0</version>
    <description>
        Contains Ogre primitives. Typically objects that inherit from Ogre::SimpleRenderable. These objects can be
        easily added to the Scene.
    </description>
    <maintainer email="andreas.reich@unibw.de">Andreas Reich</maintainer>
    <license>BSD</license>

    <author>Andreas Reich</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rviz_ogre_vendor</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
